fixed: text box overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -16,5 +16,6 @@
   .profile__info {
     width: 100%;
     margin-top: 22px;
+    align-items: center;
   }
 }
