--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,16 +1,20 @@
 .profile__subtitle {
   margin: 16px 0 0 0;
+  max-width: 336px;
   min-width: 336px;
   font-family: 'Inter';
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 710px) {
   .profile__subtitle {
-    max-width: 100%;
+    min-width: auto;
     text-align: center;
   }
 }
@@ -18,7 +22,7 @@
 @media screen and (max-width: 500px) {
   .profile__subtitle {
     margin-top: 14px;
-    min-width: auto;
+    max-width: 282px;
     font-size: 14px;
     line-height: 17px;
   }
